  /opt/local/lib
- EXIF orientation is no longer applied to JPEG images on read. EXIF
  orientation on JPEG was introduced in 5.4.0, but due to a bug the most
  common EXIF-format (big-endian) was not working until 5.4.1. 5.4.2 restores the
  behavior of 5.4.0 and earlier for most EXIF-tagged JPEGs.
  EXIF orientation will be an opt-in starting with Qt 5.5.

****************************************************************************
*                               Library                                    *
****************************************************************************

QtCore
------
 - [QTBUG-43893] Fixed memory leak in qSetMessagePattern
 - [QTBUG-43513] QXmlStreamReader: Correctly parse XML containing NUL bytes
   in the input stream
 - [QTBUG-43352] QTemporaryDirectory: Properly clean up in case of a failure
 - [QTBUG-43827] Fixed regression in QSortFilterProxyModel which crashed when
   sorting a tree model

QtGui
-----
 - [QTBUG-44273] Fixed misplacement of outlined text with native text rendering
 - [QTBUG-44147] Fixed VNC not working on some VNC servers
 - [QTBUG-43850] Fixed crash with multi-threaded font usage
 - [QTBUG-43850] Made the old harfbuzz fallback available at runtime
 - Improvements to the experimental high-dpi support
 - [QTBUG-43318] Better resolution of GLES 3 functions to avoid issues when
   deploying on systems with GLES 2.0 only

QtWidgets
---------
 - [QTBUG-43830] Fixed crash in stylesheets when styling QProgressBar
 - [QTBUG-43663] QColorDialog: Don't lose focus while color picking

QtNetwork
---------
 - [QTBUG-43793] Fixed disconnects of QSSLSocket after starting encryption

QtPrintSupport
--------------
 - [QTBUG-43124] Fixed QPrinter::{width,height} return values

****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Android
-------
