@@ -34,6 +34,13 @@ information about a particular change.
   common EXIF-format (big-endian) was not working until 5.4.1. 5.4.2 restores the
   behavior of 5.4.0 and earlier for most EXIF-tagged JPEGs.
   EXIF orientation will be an opt-in starting with Qt 5.5.
+- On x86 and x86-64 systems with ELF binaries (especially Linux), due to
+  a new optimization in GCC 5.x in combination with a recent version of
+  GNU binutils, compiling Qt applications with -fPIE is no longer
+  enough. Applications now need to be compiled with the -fPIC option if
+  Qt's option "reduce relocations" is active. Note that Clang is known
+  to generate incompatible code even with -fPIC if the -flto option is
+  active.
 
 ****************************************************************************
 *                               Library                                    *
